--- a/class.tex
+++ b/class.tex
@@ -54,7 +54,8 @@
 \begin{center}
 {\Large
   \textbf{
-  \textsc{Dimension 5 Lorentz Violating Operators in the Standard Model}
+  \textsc{Structure of Dimension 5 Lorentz Violating Interactions 
+		in the Standard Model}
          }
       }
 
@@ -64,11 +65,19 @@
 
 \vspace*{1.5cm}
 {\large\bf Abstract}
+%	We introduce Lorentz violating interactions at dimension five level into
+%	the Standard Model.
 \end{center}
 
-In this paper we give a classification to all Lorentz violating 
-operators of dimension five within the Standard Model.
-
+	We demonstrate a method how to systematically extend a theory with
+	Lorentz violating interactions on the example of the Standard Model.
+	Starting with QED we build the Lagrangian which exhibits the basic
+	features of a LV theory, and derive the RG flow equations for its
+	parameters.
+	In a similar fashion we proceed with the Standard Model and provide
+	a full list of LV interactions. 
+	We discuss typical experimental constraints applicable to the parameters
+	of such a theory.
 
 \end{titlepage}
 
@@ -194,32 +203,34 @@ operators of dimension five within the Standard Model.
 %	Violation of Lorentz invariance has more often become one of the
 %	ingredients or properties of low energy effective models.
 	
-	Although the ideas of breaking Lorentz invariance appeared
-	long ago [], nowadays the movements in this direction are
+	Quite customary theoretical and phenomenological endevours on
+%	Every now and then theoretical and phenomenological reviews on 
+	Lorentz violation use effective 
+% higher dimensional 
+	low energy operators coupled to background tensors 
+	as one of the approaches to break 
+	Lorentz invariance.
+	The ideas of breaking Lorentz invariance appeared
+	long ago [], and nowadays streaming in this direction is
 	stimulated by advances in experimental techniques which can
 	probe for this symmetry.
 	From the other direction come highly fashioned models [loopgr,
 	strings,non-comm] of 
 	fundamental interactions which predict that violation of 
-	Lorentz invariance might take place at low energies.
+	Lorentz symmetry might take place at low energies.
+	However, the mechanism for breaking of Lorentz invariance, generally
+	speaking, is not known.
 	From aesthetical point of view the possibility of spontaneous
 	breaking of Lorentz invariance seems the most attractive, 
 	and a lot of investigations have been done in this
 	area, however, a satisfactory mechanism for SBLS has not
 	been found. 
 
-{\Large\it Baryogenesis somewhere}
-
-	One can still work in the effective theory, where the
-	breaking of Lorentz invariance is explicit.
-	Quite customary theoretical and phenomenological endevours on
-%	Every now and then theoretical and phenomenological reviews on 
-	Lorentz violation use effective 
-% higher dimensional 
-	low energy operators coupled to background tensors to break 
-	Lorentz invariance.
-	Most developments consider only a sufficiently limited set
-	of such operators, the most popular of which are the dimension three
+	But it is still possible to work in the effective theory, wherein the
+	breaking of Lorentz invariance is made explicit via the 
+	presence of background tensors.
+	In this direction, most developments consider only a sufficiently limited set
+	of LV interactions, the most popular of which are the dimension three
 	Chern-Simons term and the minimal coupling fermionic current operator. 
 	Among tensor operators, most frequently one would encounter 
 	those originating from non-commutative field theories, where the
@@ -231,7 +242,7 @@ operators of dimension five within the Standard Model.
 
 	That is not so at the mass dimension five level.
 	Modern reviews occasionally include some dimension five structures
-	and investigate the properties of the resulting models.
+	and investigate the phenomenology of the resulting models.
 	However, the number of admissible LV interactions grows with their
 	mass dimension.
 	A natural problem of reviewing all imaginable LV interactions
@@ -247,11 +258,11 @@ operators of dimension five within the Standard Model.
 	been explored in a similar thorough manner.
 	
 
-	Our goal is to write down a generic LV theory with mass dimension
-	five operators, compatible with the Standard Model and to classify
+	Our intention is to write down a generic LV theory with mass dimension
+	five interactions, compatible with the Standard Model and to classify
 	the inherent LV operators. 
 	The problem of constraining the parameters of such a theory, although
-	seems important, remains out of the main line of our work, given
+	is important, remains out of the main line of our work, given
 	that already a number of highly-competitive bounds were obtained
 	within recent years [].
 %	We are not pursuing the goal of putting constraints on these interactions,
@@ -262,9 +273,9 @@ operators of dimension five within the Standard Model.
 %	In most cases the consideration of Lorentz violation was limited
 %	to a theory with one background vector per sector of the 
 %	Standard Model. 
-	Most existing limits on LV interactions were derived based on some
+	Most of the current limits on LV interactions were derived based on some
 	restricting assumptions made in the LV sector.
-	Such considerations of Lorentz violation were limited to a theory with
+	Such considerations of Lorentz violation were typically limited to a theory with
 	one background vector per sector of the Standard Model.
 	As we argue here, a theory with LV interactions of mass
 	dimension five generically contains a variety of vector and tensor 
@@ -272,21 +283,23 @@ operators of dimension five within the Standard Model.
 	We demonstrate that even the theory of electrodynamics acquires a set
 	of rather complicated interactions. 
 
-	The main line of this survey is an essentially abstract listing 
-	of LV interactions in the SM based on the derivation of irreducible
+	The main line of this survey is an essentially abstract listing and
+	classification of LV interactions in the SM based on the derivation of irreducible
 	tensor structures compatible with the gauge symmetries of the SM.
-	With this in mind, we do not hunt for new phenomena which may help
-	restrict the magnitude of these interactions. 
-	As a matter of fact, one can find a strikingly broad facilitation of 
-	LV operators for searching for new effects ---
+	From the phenomenological respect, one can find a strikingly broad 
+	facilitation of LV operators in searching for new effects ---
 	starting from Quantum mechanical phenomena, nuclear, high energy physics,
 	astrophysical effects and reaching towards cosmology and gravity
 	[{\it lots of refs}].
-	The broader set of interactions introduced here may be expected to 
+	One of the newly proposed directions is the possibility of CPT-odd
+	thermal baryogenesis.
+	One could anticipate that some of the LV interactions can catalyze 
+	generation of baryon asymmetry of the Universe in thermal equilibrium.
+	Generalizing, the broader set of interactions introduced here may be expected to 
 	produce more investigations and phenomenological applications in the area of
 	Lorentz violation, which, however, are outside the scope of this paper. 
 
-	Enumeration of operators proceeds by building various gauge-invariant tensors
+	Classification of operators proceeds by building various gauge-invariant tensors
 	from the Standard Model fields. 
 	Following [{\it Myers, Pospelov}] we specify that a generic interaction must
 	fulfil certain conditions to be called a true LV operator. 
@@ -301,7 +314,6 @@ operators of dimension five within the Standard Model.
 %	requiring that every tensor LV operator must be an irreducible tensor
 %	of the corresponding rank --- later on it will be clear why it is
 %	important.
-
 	In total, our conditions look as follows: 
 	an LV operator of specific dimension must be
 \begin{itemize}
@@ -324,21 +336,24 @@ operators of dimension five within the Standard Model.
 	from each other.
 	In particular, higher-rank interactions are independent of the lower-rank
 	ones.
-	They are also gurranteed to be independent within the set of tensors of the
+	They are in most cases also independent within the set of tensors of the
 	same rank.
 	Quantum corrections change this situation, but still, as we will see 
 	in the case of QED, the choice of irreducible structures is the best guess 
 	for operators forming an orthogonal basis under the renormalization group.
 	And finally, most irreducible operators are protected from developing
 	quadratic divergencies and with them severe naturalness problems,
-	which are catalyzed by strong limits on lower-dimensional interactions.
+	which are amplified by strong limits on lower-dimensional interactions.
 
 	Our survey starts with consideration of Quantum Electrodynamics, 
 	which as we show possesses a rich structure of LV interactions.
 	Although QED is definitely not the most fashionable theory nowadays,
-	the main features of LV lagrangians are the easiest to study within it.
-	Furthermore, in the aspect of LV effects, QED is still one of the
-	most popular testing grounds [].
+	it is still the most straightforward to study the main features of	
+	LV Lagrangians.
+%	the main features of LV lagrangians are the easiest to study within it.
+%	Furthermore, in the aspect of LV effects, 
+	In this aspect,
+	QED is still one of the most popular testing grounds [].
 	It also allows us to make the transition to the Standard Model more
 	smooth. 
 	We develop 1-loop RG equations for the LV interactions in QED.
@@ -346,19 +361,21 @@ operators of dimension five within the Standard Model.
 	operators.
 	On this example we show how parity arguments allow one to additionally 
 	separate operators undergoing RG mixing.
-	Such an analysis in the Standard Model may be highly useful for 
-	phenomenological purposes, but due to the complicated structure of
-	interactions, we only concentrate on the example of operators which
-	modify dispersion relations.
-	As compard to QED, in the Standard Model chirality restricts the number of types
+	As compared to QED, in the Standard Model chirality restricts the number of types
 	of interactions. 
 	However, the abundance of field content makes possible for more diverse 
 	structures and links between them.
+	A complete RG analysis in the Standard Model may be highly useful for 
+	the phenomenological side of the problem, but due to the excessively 
+	complicated structure of interactions, we only elaborate on the example of 
+	operators which modify dispersion relations.
 	At the end, we dwell on phenomenological limits which can be put
-	on the LV Standard Model. 
+	on the LV Standard Model below the EW scale.
 	Although the constraints are normally only available in the most
 	accessible sectors, we anticipate that renormalization group mixing
-	enables one to translate them onto the other, less accessible sectors.
+	enables one to translate them onto the other, less accessible interactions.
+	We therefore, make a reasonable conjecture that LV at dimension five level is
+	most certainly excluded by experiment.
 	
 %	We comment on the phenomenological constraints for the LV 
 %	content of the Standard Model.
@@ -1906,10 +1923,10 @@ $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
 	proportional to $ \alpha_{\rm S} $ [{\it Manohar, Georgi, 1984, NPB234}]. 
 	However, any conceivable electromagnetic field which can be created in laboratory
 	is much weaker than a typical nuclear field.
-	For, a laboratory wind-up of $ |\vec{E}{}_{\rm ext}| \sim $ 10~kV/cm 
+	For a laboratory setup of $ |\vec{E}{}_{\rm ext}| \sim $ 10~kV/cm 
 	$ \hookrightarrow 1~{\rm eV}^2 $, and 
 	$ |\vec{E}{}_{\rm nucl}| \sim \Lambda_{\rm hadr}^2 $
-	one loses in stringency about sixteen orders of magnitude to \eqref{nucl_spin}.
+	one loses about sixteen orders of magnitude in stringency to \eqref{nucl_spin}.
 	
 	The interactions $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ and
 	$ D^{\mu\nu\rho}_{qg,5} $ can be shown to exhibit EDM-like signatures
@@ -1919,7 +1936,9 @@ $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
 	Electron operators $ c_{l,5}^\mu $ and $ D_{l,5}^{\mu\nu\rho} $ similarly induce
 	EDMs in paramagnetic atoms. 
 	Current limits on atomic and nuclear EDMs allow one to bound these interactions
-	at the $ \sim 10^{-25}~e{\rm cm} $ $ \sim 10^{-13}~{\rm GeV}^{-1} $ level.
+	at the $ \sim 10^{-25}~e{\rm cm} $ 
+% $ \sim 10^{-13}~{\rm GeV}^{-1} $
+	level.
 	
 
 	Although in most cases direct measurements and observations do not involve 
