--- a/class.tex
+++ b/class.tex
@@ -210,13 +210,13 @@
 	low energy operators coupled to background tensors 
 	as one of the approaches to break 
 	Lorentz invariance.
-	The ideas of breaking Lorentz invariance appeared
+	The idea of breaking Lorentz invariance appeared
 	long ago [], and nowadays streaming in this direction is
 	stimulated by advances in experimental techniques which can
 	probe for this symmetry.
 	From the other direction come highly fashioned models [loopgr,
 	strings,non-comm] of 
-	fundamental interactions which predict that violation of 
+	UV physics which predict that violation of 
 	Lorentz symmetry might take place at low energies.
 	However, the mechanism for breaking of Lorentz invariance, generally
 	speaking, is not known.
@@ -261,10 +261,11 @@
 	Our intention is to write down a generic LV theory with mass dimension
 	five interactions, compatible with the Standard Model and to classify
 	the inherent LV operators. 
-	The problem of constraining the parameters of such a theory, although
-	is important, remains out of the main line of our work, given
-	that already a number of highly-competitive bounds were obtained
-	within recent years [].
+%	The problem of constraining the parameters of such a theory, although
+%	is important, remains out of the main line of our work, given
+%	that already a number of highly-competitive bounds were obtained
+%	within recent years [].
+%
 %	We are not pursuing the goal of putting constraints on these interactions,
 %	as there are already severe limits [{\it ref}] which essentially exclude
 %	LV at dimension five level.
@@ -286,7 +287,13 @@
 	The main line of this survey is an essentially abstract listing and
 	classification of LV interactions in the SM based on the derivation of irreducible
 	tensor structures compatible with the gauge symmetries of the SM.
-	From the phenomenological respect, one can find a strikingly broad 
+	The problem of constraining the parameters of such a theory, although
+	is important, remains out of the main line of our work, given
+	that already a number of highly-competitive bounds were obtained
+	within recent years [].
+%	From the phenomenological respect, 
+	As a matter of fact,
+	one can find a strikingly broad 
 	facilitation of LV operators in searching for new effects ---
 	starting from Quantum mechanical phenomena, nuclear, high energy physics,
 	astrophysical effects and reaching towards cosmology and gravity
@@ -1720,9 +1727,11 @@ $ \ov{Q}\, \gamma^\lambda G_{\mu\lambda} Q $
 	Besides the conceptual difficulty of quadratically-divergent terms,
 	they fall under severe constraints on dimension three
 	interactions
-\[
-	| b^\mu | ~=~ \Lambda^2 | \wt{c}^\mu |  ~\lesssim~ 10^{-29}~{\rm GeV}~.
-\]
+\begin{equation}
+\label{limit_dim3}
+	| b^\mu | ~=~ ({\rm loop\ factor})\, 
+		\Lambda^2 | \wt{c}^\mu |  ~\lesssim~ 10^{-29}~{\rm GeV}~.
+\end{equation}
 	Even in the mildest UV scenario, {\it e.g.} $ \Lambda = \Lambda_{\rm SUSY} $,
 	this limit would exhibit strongly unnatural hierarchy between the interactions
 	\eqref{SM_quark}, \eqref{SM_lepton}. 
@@ -1866,6 +1875,19 @@ $ C^{\mu\nu\rho} $
 	\multicolumn{1}{|c|}{~~~~~~Typical constraints~~~~~~} & 
 	\multicolumn{1}{|c|}{Source of constraints} \\
 \hline
+	\multicolumn{3}{|l|}{\quad Interactions transmuting into
+				lower-dimensional operators } \\
+\hline
+	$ \wt{c}_{Q,1}^\mu  $
+	$ \wt{c}_{Q,3}^\mu  $
+	$ \wt{c}_{q,1}^\mu  $
+	$ \wt{c}_{q,3}^\mu  $
+	$ \wt{c}_{L,1}^\mu  $
+	$ \wt{c}_{\psi}^\mu $  &
+	$ \ll 10^{-31}~{\rm GeV}^{-1} $ &
+	constraints on dim 3 operators
+	\\
+\hline
 	\multicolumn{3}{|l|}{\quad Operators growing with energy} \\
 \hline
 	$ C_{q}^{\mu\nu\rho} $ $ C_{q,5}^{\mu\nu\rho} $
@@ -1951,17 +1973,18 @@ $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
 	operators as $ \ov{\psi}\,\wt{F}^{\mu\nu}\gamma_\mu [\gamma^5] \psi $,
 	since in the Standard Model they are unprotected from quadratic divergencies
 	(see Eq.\eqref{SM_divgt}).
-	We build our model at a high ultraviolate scale, and such divergencies
-	would bring consistency problems into the theory.
-	In particular, we assumed our GeV-scale interactions to be expressed in terms
-	of linear combinations of trans-weak operators via a smooth logarithmic
-	RG flow, which clearly stands in conflict with the presence of quadratic
-	divergencies.
-	One can still think of these problems as model-dependent.
-	In a different onset, where one is not worried about quadratic divergencies,
-	(to say, if the UV cut-off scale of the effective theory is appreciably low)
-	such operators may still be bearable,
-	and one could wonder about their experimental signatures.
+	The limits on these operators were recently reviewed in the literature.
+%	We build our model at a high ultraviolate scale, and such divergencies
+%	would bring consistency problems into the theory.
+%	In particular, we assumed our GeV-scale interactions to be expressed in terms
+%	of linear combinations of trans-weak operators via a smooth logarithmic
+%	RG flow, which clearly stands in conflict with the presence of quadratic
+%	divergencies.
+%	One can still think of these problems as model-dependent.
+%	In a different onset, where one is not worried about quadratic divergencies,
+%	(to say, if the UV cut-off scale of the effective theory is appreciably low)
+%	such operators may still be bearable,
+%	and one could wonder about their experimental signatures.
 	In particular, the structure 
 	$ \ov{\psi}\,\wt{F}^{\mu\nu}\gamma_\mu \gamma^5 \psi $
 	induces a CPT-odd anomalous magnetic moment for the electron 
@@ -1971,6 +1994,10 @@ $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
 	The interaction term $ \ov{\psi}\,\wt{F}^{\mu\nu}\gamma_\mu \psi $
 	in its turn is expected to generate a detectable 
 	Aharanov-Casher phase of a neutral particle [{\it hep-th/0603091}].
+	However, we again emphasize that the naturalness considerations
+	put much stronger bounds and 
+	render these operators practically impossible to exist, 
+	see Eq. \eqref{limit_dim3}.
 	
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
