working on introduction, modifying a bit

--- a/class.tex
+++ b/class.tex
@@ -54,7 +54,7 @@
 \begin{center}
 {\Large
   \textbf{
-  \textsc{Structure of Dimension 5 Lorentz Violating Interactions 
+  \textsc{Classification of Dimension 5 Lorentz Violating Interactions 
 		in the Standard Model}
          }
       }
@@ -214,9 +214,9 @@
 	long ago [], and nowadays streaming in this direction is
 	stimulated by advances in experimental techniques which can
 	probe for this symmetry.
-	From the other direction come highly fashioned models [loopgr,
-	strings,non-comm] of 
-	UV physics which predict that violation of 
+	From the other direction come models of 
+	UV physics [loopgr,
+	strings,non-comm] which predict that violation of 
 	Lorentz symmetry might take place at low energies.
 	However, the mechanism for breaking of Lorentz invariance, generally
 	speaking, is not known.
@@ -228,9 +228,9 @@
 
 	But it is still possible to work in the effective theory, wherein the
 	breaking of Lorentz invariance is made explicit via the 
-	presence of background tensors.
+	presence of background tensors, as was done by Kostelecky [ref].
 	In this direction, most developments consider only a sufficiently limited set
-	of LV interactions, the most popular of which are the dimension three
+	of LV interactions, examples of which are the dimension three
 	Chern-Simons term and the minimal coupling fermionic current operator. 
 	Among tensor operators, most frequently one would encounter 
 	those originating from non-commutative field theories, where the
@@ -253,10 +253,27 @@
 	been covered only partly. 
 	While the supersymmetric Standard Model (MSSM) has been shown to,
 	owing to a stronger symmetry, possess a sufficiently small set of 
-	admissible structures [{\it ref}] (and we believe that most of the
-	popular UV extensions do so), the Standard Model itself has not 
+	admissible structures [{\it ref}] (and we believe that other
+	UV extensions do so), the Standard Model itself has not 
 	been explored in a similar thorough manner.
-	
+
+	Another motivation for considering operators of dimension five,
+	is that lower dimensional operators have difficulties both with
+	phenomenology and effective field theory.
+	Indeed, while dimension three operators on general grounds are
+	expected to be enhanced by the ultraviolate scale 
+$ \Lambda_{\rm UV} $,
+	experiment shows that they are in fact negligibly tiny.
+	Therefore, in order to consider an effective field theory with
+	operators of dimension three, one has to make a severe tune-up
+	of the model at the high scales, which causes a naturalness problem.
+	Dimension five interactions, and higher dimensional operators in
+	general, are naturally expected to be suppressed by the ultraviolate
+	scale $ \Lambda_{\rm UV} $, so that the deviation from the Lorentz-
+	invariant dynamics is indeed very small.
+	We investigate theories modified with operators of 
+	dimension five, since, as we mentioned, even at this level the
+	full classification is missing.
 
 	Our intention is to write down a generic LV theory with mass dimension
 	five interactions, compatible with the Standard Model and to classify
@@ -284,7 +301,7 @@
 	We demonstrate that even the theory of electrodynamics acquires a set
 	of rather complicated interactions. 
 
-	The main line of this survey is an essentially abstract listing and
+	The main line of this survey is a listing and
 	classification of LV interactions in the SM based on the derivation of irreducible
 	tensor structures compatible with the gauge symmetries of the SM.
 	The problem of constraining the parameters of such a theory, although
@@ -298,7 +315,7 @@
 	starting from Quantum mechanical phenomena, nuclear, high energy physics,
 	astrophysical effects and reaching towards cosmology and gravity
 	[{\it lots of refs}].
-	One of the newly proposed directions is the possibility of CPT-odd
+	One of the relevant directions is the possibility of CPT-odd
 	thermal baryogenesis.
 	One could anticipate that some of the LV interactions can catalyze 
 	generation of baryon asymmetry of the Universe in thermal equilibrium.
@@ -332,6 +349,8 @@
 	\item coupled to an irreducible background tensor.
 \end{itemize}
 
+	{\it Replace the next paragraph by the III types of LV interactions.}
+
 	A straightforward method for building tensor LV interactions is using Young
 	tableaux to compose tensor structures (see Appendix \ref{young}).
 	The key ingredients in this approach are the components which carry 
@@ -354,16 +373,19 @@
 
 	Our survey starts with consideration of Quantum Electrodynamics, 
 	which as we show possesses a rich structure of LV interactions.
-	Although QED is definitely not the most fashionable theory nowadays,
-	it is still the most straightforward to study the main features of	
-	LV Lagrangians.
+%	Although QED is definitely not the most fashionable theory nowadays,
+	QED is the most straightforward theory
+	to study the main features of LV Lagrangians, and 
+%	it is still the most straightforward to study the main features of	
+%	LV Lagrangians.
 %	the main features of LV lagrangians are the easiest to study within it.
 %	Furthermore, in the aspect of LV effects, 
-	In this aspect,
-	QED is still one of the most popular testing grounds [].
+	in this aspect,
+	it is still one of the most popular testing grounds [].
 	It also allows us to make the transition to the Standard Model more
 	smooth. 
-	We develop 1-loop RG equations for the LV interactions in QED.
+	Within QED, we develop 1-loop RG equations for the LV interactions.
+%in QED.
 	As we will see, this will prove the efficiency of using irreducible
 	operators.
 	On this example we show how parity arguments allow one to additionally 
