--- a/class.tex
+++ b/class.tex
@@ -69,15 +69,28 @@
 %	the Standard Model.
 \end{center}
 
-	We demonstrate a method how to systematically extend a theory with
-	Lorentz violating interactions on the example of the Standard Model.
-	Starting with QED we build the Lagrangian which exhibits the basic
-	features of a LV theory, and derive the RG flow equations for its
-	parameters.
-	In a similar fashion we proceed with the Standard Model and provide
-	a full list of LV interactions. 
-	We discuss typical experimental constraints applicable to the parameters
-	of such a theory.
+	We investigate generic Lorentz-violating extensions of Quantum Electrodynamics and
+	the Standard Model at the level of mass dimension five operators.
+	We classify all inherent LV interactions and show that they
+%	We show that LV interactions are naturally grouped into three major classes,
+	are naturally grouped into three major classes,
+	which at the same time manifest different types and strengths of phenomenological constraints
+	on these operators.
+	We argue, that existing strong limits on the operators from the observable sector
+	can be extended to all listed interactions via the RG flow mixing, 
+	therefore producing a naturalness problem to theories predicting LV of dimension five.
+	
+	
+
+%	We demonstrate a method how to systematically extend a theory with
+%	Lorentz violating interactions on the example of the Standard Model.
+%	Starting with QED we build the Lagrangian which exhibits the basic
+%	features of a LV theory, and derive the RG flow equations for its
+%	parameters.
+%	In a similar fashion we proceed with the Standard Model and provide
+%	a full list of LV interactions. 
+%	We discuss typical experimental constraints applicable to the parameters
+%	of such a theory.
 
 \end{titlepage}
 
@@ -349,27 +362,45 @@ $ \Lambda_{\rm UV} $,
 	\item coupled to an irreducible background tensor.
 \end{itemize}
 
-	{\it Replace the next paragraph by the III types of LV interactions.}
+	{\it Maxim, are the names for these operators ok?}
+	We find that operators built in this manner can on general grounds be 
+	divided into three groups.
+	The first group is the ``unprotected operators'', {\it i.e.} those which can
+	generate lower-dimensional interactions by developing quadratic divergencies.
+	Such operators are therefore dangerous, and as a rule, very severely constrained
+	from existence by strong limits on lower dimensional operators multiplied
+	by the square of the UV scale.
+	The second group is ``kinematic operators'' which lead to different kinematic
+	phenomena, mainly due to modification of dispersion relations.
+	This group is constrained by observations of particles propagating over cosmological 
+	distances, in the form of cosmic rays.
+	The last group is formed by ``soft LV interactions'' which do not modify
+	propagation of particles and therefore are only constrained by laboratory
+	searches for preferred directions.
+	The detailed overview of these interactions can be found 
+	in Section~\ref{phenomenology}.
 
-	A straightforward method for building tensor LV interactions is using Young
-	tableaux to compose tensor structures (see Appendix \ref{young}).
-	The key ingredients in this approach are the components which carry 
-	Lorentz indices --- derivatives, gamma-matrices, etc.
-	The main advantage is that the interactions obtained in this way are
-	Lorentz-irreducible by construction.
-	The irreducibility plays an important multi-faced role. 
-	First, one ensures that the operators in a given sector are independent
-	from each other.
-	In particular, higher-rank interactions are independent of the lower-rank
-	ones.
-	They are in most cases also independent within the set of tensors of the
-	same rank.
-	Quantum corrections change this situation, but still, as we will see 
-	in the case of QED, the choice of irreducible structures is the best guess 
-	for operators forming an orthogonal basis under the renormalization group.
-	And finally, most irreducible operators are protected from developing
-	quadratic divergencies and with them severe naturalness problems,
-	which are amplified by strong limits on lower-dimensional interactions.
+%	{\it Replace the next paragraph by the III types of LV interactions.}
+
+%	A straightforward method for building tensor LV interactions is using Young
+%	tableaux to compose tensor structures (see Appendix \ref{young}).
+%	The key ingredients in this approach are the components which carry 
+%	Lorentz indices --- derivatives, gamma-matrices, etc.
+%	The main advantage is that the interactions obtained in this way are
+%	Lorentz-irreducible by construction.
+%	The irreducibility plays an important multi-faced role. 
+%	First, one ensures that the operators in a given sector are independent
+%	from each other.
+%	In particular, higher-rank interactions are independent of the lower-rank
+%	ones.
+%	They are in most cases also independent within the set of tensors of the
+%	same rank.
+%	Quantum corrections change this situation, but still, as we will see 
+%	in the case of QED, the choice of irreducible structures is the best guess 
+%	for operators forming an orthogonal basis under the renormalization group.
+%	And finally, most irreducible operators are protected from developing
+%	quadratic divergencies and with them severe naturalness problems,
+%	which are amplified by strong limits on lower-dimensional interactions.
 
 	Our survey starts with consideration of Quantum Electrodynamics, 
 	which as we show possesses a rich structure of LV interactions.
@@ -382,13 +413,15 @@ $ \Lambda_{\rm UV} $,
 %	Furthermore, in the aspect of LV effects, 
 	in this aspect,
 	it is still one of the most popular testing grounds [].
-	It also allows us to make the transition to the Standard Model more
+	Detailed study of LV QED in the first place will also 
+	allow us to make the transition to the Standard Model more
 	smooth. 
 	Within QED, we develop 1-loop RG equations for the LV interactions.
 %in QED.
 	As we will see, this will prove the efficiency of using irreducible
 	operators.
-	On this example we show how parity arguments allow one to additionally 
+%	On this example 
+	We show how parity arguments allow one to additionally 
 	separate operators undergoing RG mixing.
 	As compared to QED, in the Standard Model chirality restricts the number of types
 	of interactions. 
@@ -416,7 +449,7 @@ $ \Lambda_{\rm UV} $,
 %	exploit in the derivation of the LV lagrangians.
 	
 
-\section{Dimension V Operators in QED}
+\section{Dimension 5 Operators in QED}
 
 	To build a Lorentz-violating extension of QED, we proceed in a manner
 	similar to Myers-Pospelov electrodynamics [].
@@ -470,8 +503,9 @@ $ \Lambda_{\rm UV} $,
 	On the other hand, Young tableaux appear to be less useful in this particular
 	sector.
 	Indeed, dimension five LV interactions can admit structures up to rank five.
-	There are 26 numbered Young tableaux to consider, and, as we soon will see,
-	they would ultimately lead to only one true LV operator.
+	There are 26 numbered Young tableaux to consider, which would 
+%and, as we soon will see, they would 
+	ultimately lead to only one true LV operator.
 
 	Quite straightforwardly it can be shown that a generic content of a gauge
 	invariant tensor is twice the field strength  $ F_{\mu\nu} $ (or 
@@ -553,7 +587,7 @@ $ F^{\mu\nu} \partial^\lambda F^{\rho\sigma} $,
 	into the equations of motion, 
 %	we would see that it modifies the dispersion relations either.
 	seems to modify the dispersion relations in a manner similar to \eqref{QED_gauge}.
-	However, that is a misleading conclusion.
+	However, that would be a misleading conclusion.
 	As in the case of the 3-rd rank operator just discussed,
 	to be sure that this term indeed induces a non-trivial 
 	correction to the EOM, one needs to separate it from all
@@ -635,7 +669,9 @@ $ F^{\mu\nu} \partial^\lambda F^{\rho\sigma} $,
 	resulting operators, using either $ g^{\mu\nu} $ or $ \epsilon^{\lambda\mu\nu\rho} $,
 	which, generically, leads to independent structures.
 	Omitting the details, we show the list of true LV operators
-	in the matter sector:
+	in the matter sector
+	(we have appended to each operator a $+$ or $-$ superscript reflecting
+	its parity under charge conjugation):
 %%
 %% the full list of operators
 \begin{eqnarray}
@@ -717,8 +753,8 @@ $ F^{\mu\nu} \partial^\lambda F^{\rho\sigma} $,
 		\right ) \psi {}^{-} 
 	~.
 \end{eqnarray}
-	We have appended to each operator an upper $+$ or $-$ index reflecting
-	its parity under charge conjugation.
+%	We have appended to each operator an upper $+$ or $-$ index reflecting
+%	its parity under charge conjugation.
 	We again stress that all structures shown here assume
 	their coefficients to be {\it irreducible tensors} of the 
 	corresponding rank. 
@@ -752,39 +788,39 @@ $	E_1^{\mu\nu\rho\lambda}\cdot
 	to expose the symmetry properties of tensors via explicit 
 	symmetrizations on the Lorentz indices of the field operators.
 
-	[{\it Subject to removal. 
-	The traces of the operators in \eqref{QED_matter} (which are subtracted
-	to make them irreducible) themselves could in principle be
-	good LV operators. 	
-	However, it turns out that in QED all $ g^{\mu\nu} $- and
-	$ \epsilon^{\kappa\mu\nu\rho} $-contractions of the operators 
-	listed above are reducible on the equations of motion. 
-%	We have stated that the tensors entering \eqref{QED_matter} are
-%	all irreducible, {\it i.e.} have all their traces removed.
-%	What about these traces themselves? Are they good LV operators?
-%	It turns out that all traces of the operators listed in 
-%	\eqref{QED_matter} (before they are made irreducible) are
-%	reducible on the equations of motion. 
-	This includes the operators $ c_{1,2}^\mu $ which explicitly
-	contain a contraction.
-	But this does not
-	include the $ \wt{c}_{1,2}^\mu $ operators: although they
-	seem to contain an explicit contraction of indices, 
-	they are
-% as the latter ones are 
-%not real traces
-% but rather 
-	in fact 
-	the absolutely antisymmetric parts of the rank 3 tensor
-	operators $ \ov{\psi}\, \gamma^\mu F^{\nu\rho} [\gamma^5] \psi $.
-	This ``absence of traces'' property is valid for QED only.
-	It states that the true LV operators are irreducible tensors
-	built out of gamma matrices, $ F^{\mu\nu} $ and the covariant
-	derivative.
-	For QCD, as we will see later, this is almost true.
-%	although this is not true, the 
-%	list of operator does not extend too much.
-	}]
+%	[{\it Subject to removal. 
+%	The traces of the operators in \eqref{QED_matter} (which are subtracted
+%	to make them irreducible) themselves could in principle be
+%	good LV operators. 	
+%	However, it turns out that in QED all $ g^{\mu\nu} $- and
+%	$ \epsilon^{\kappa\mu\nu\rho} $-contractions of the operators 
+%	listed above are reducible on the equations of motion. 
+%%	We have stated that the tensors entering \eqref{QED_matter} are
+%%	all irreducible, {\it i.e.} have all their traces removed.
+%%	What about these traces themselves? Are they good LV operators?
+%%	It turns out that all traces of the operators listed in 
+%%	\eqref{QED_matter} (before they are made irreducible) are
+%%	reducible on the equations of motion. 
+%	This includes the operators $ c_{1,2}^\mu $ which explicitly
+%	contain a contraction.
+%	But this does not
+%	include the $ \wt{c}_{1,2}^\mu $ operators: although they
+%	seem to contain an explicit contraction of indices, 
+%	they are
+%% as the latter ones are 
+%%not real traces
+%% but rather 
+%	in fact 
+%	the absolutely antisymmetric parts of the rank 3 tensor
+%	operators $ \ov{\psi}\, \gamma^\mu F^{\nu\rho} [\gamma^5] \psi $.
+%	This ``absence of traces'' property is valid for QED only.
+%	It states that the true LV operators are irreducible tensors
+%	built out of gamma matrices, $ F^{\mu\nu} $ and the covariant
+%	derivative.
+%	For QCD, as we will see later, this is almost true.
+%%	although this is not true, the 
+%%	list of operator does not extend too much.
+%	}]
 
 \subsection{1-loop RG coefficients}
 
@@ -802,8 +838,10 @@ $	E_1^{\mu\nu\rho\lambda}\cdot
 
 %	We now study the 1-loop running of the LV operators 
 %	\eqref{QED_gauge} and \eqref{QED_matter}.
-	On general grounds one would expect the RG equations to be overly
-	complicated due to various mixing between the operators.
+	On general grounds one would expect the RG equations to be highly
+	complicated due to various mixings between the operators.
+%	On general grounds one would expect the RG equations to be overly
+%	complicated due to various mixing between the operators.
 	However, the two reasons --- discrete symmetries and irreducibility
 	of the Lorentz tensors --- reduce this sort of mixing down to
 	a minimum.
@@ -1281,7 +1319,7 @@ $ \ov{Q}\, \gamma^\lambda G_{\mu\lambda} Q $
 	~. 
 \]
 
-	``Reducibility of traces''?
+%	``Reducibility of traces''?
 
 %	We again note that due to chirality of quarks, the LV structures 
 %	\eqref{QED_matter} of QED with an even number of $ \gamma $-matrices
@@ -1467,57 +1505,80 @@ $ \ov{Q}\, \gamma^\lambda G_{\mu\lambda} Q $
 \notag
 	&
 	\phantom{+~~}
-	\ov{Q}\, \gamma^\mu Q \cdot H^\dag H ~~+~~
-	\ov{u}\, \gamma^\mu u \cdot H^\dag H ~~+~~
-	\ov{d}\, \gamma^\mu d \cdot H^\dag H 
+	h_{QQ}^\mu \cdot
+	\ov{Q}\, \gamma_\mu Q \cdot H^\dag H ~~+~~
+	h_{uu}^\mu \cdot
+	\ov{u}\, \gamma_\mu u \cdot H^\dag H ~~+~~
+	h_{dd}^\mu \cdot
+	\ov{d}\, \gamma_\mu d \cdot H^\dag H 
 	\\
 % third line
 \notag
 	&
 	+~~
-	\ov{Q}H \, \gamma^\mu\, H^\dag Q ~~+~~
-	\ov{Q}\epsilon H^* \, \gamma^\mu \, H^T \epsilon Q 
+	p^{(1)\mu}_{QQ} \cdot
+	\ov{Q}H \, \gamma_\mu\, H^\dag Q ~~+~~
+	p^{(2)\mu}_{QQ} \cdot
+	\ov{Q}\epsilon H^* \, \gamma_\mu \, H^T \epsilon Q 
 	\\
 % fourth line
 \notag
 	&
 	+~~
-	\ov{Q}\, \md^\mu d\cdot H ~~+~~
-	\ov{Q}\, d \; \md^\mu H ~~+~~
-	\ov{Q}\, \md^\mu u \cdot \epsilon H^* ~~+~~
-	\ov{Q}\, u \; \md^\mu \epsilon H^* ~~+~~
+	q^{(1)\mu}_{Qd} \cdot
+	\ov{Q}\, \md_\mu d\cdot H ~~+~~
+	q^{(2)\mu}_{Qd} \cdot
+	\ov{Q}\, d \; \md_\mu H ~~+~~
 	\text{h.c.}
 	\\
 % fifth line
 \notag
 	&
 	+~~
-	\ov{Q}\, \sigma^{\mu\nu} \md_\nu d \cdot H ~~+~~
-	\ov{Q}\, \sigma^{\mu\nu} d\; \md_\nu H ~~+~~
+	q^{(1)\mu}_{Qu} \cdot
+	\ov{Q}\, \md_\mu u \cdot \epsilon H^* ~~+~~
+	q^{(2)\mu}_{Qu} \cdot
+	\ov{Q}\, u \; \md_\mu \epsilon H^* ~~+~~
 	\text{h.c.}
 	\\
 % sixth line
 \notag
 	&
 	+~~
-	\ov{Q}\, \md^{(\mu} \sigma^{\nu)\rho} d \cdot H ~~+~~
-	\ov{Q}\, \sigma^{\nu)\rho} d \; \md^{(\mu} H ~~+~~
+	r^{(1)\nu}_{Qd} \cdot
+	\ov{Q}\, \sigma^{\mu\nu} \md_\nu d \cdot H ~~+~~
+	r^{(2)\nu}_{Qd} \cdot
+	\ov{Q}\, \sigma^{\mu\nu} d\; \md_\nu H ~~+~~
 	\text{h.c.}
 	\\
 % seventh line
 \notag
 	&
 	+~~
-	\ov{Q}\, \sigma^{\mu\nu} \md_\nu u \cdot \epsilon H^* ~~+~~
-	\ov{Q}\, \sigma^{\mu\nu} u\; \md_\nu \epsilon H^* ~~+~~
+	r^{(1)\mu\nu\rho}_{Qd} \cdot
+	\ov{Q}\, \md_{(\mu} \sigma_{\nu)\rho} d \cdot H ~~+~~
+	r^{(2)\mu\nu\rho}_{Qd} \cdot
+	\ov{Q}\, \sigma_{\nu)\rho} d \; \md_{(\mu} H ~~+~~
 	\text{h.c.}
 	\\
 % eighth line
 \notag
 	&
 	+~~
-	\ov{Q}\, \md^{(\mu} \sigma^{\nu)\rho} u \cdot \epsilon H^* ~~+~~
-	\ov{Q}\, \sigma^{\nu)\rho} u \; \md^{(\mu} \epsilon H^* ~~+~~
+	r^{(1)\nu}_{Qu} \cdot
+	\ov{Q}\, \sigma^{\mu\nu} \md_\nu u \cdot \epsilon H^* ~~+~~
+	r^{(2)\nu}_{Qu} \cdot
+	\ov{Q}\, \sigma^{\mu\nu} u\; \md_\nu \epsilon H^* ~~+~~
+	\text{h.c.}
+	\\
+% ninth line
+\notag
+	&
+	+~~
+	r^{(1)\mu\nu\rho}_{Qu} \cdot
+	\ov{Q}\, \md_{(\mu} \sigma_{\nu)\rho} u \cdot \epsilon H^* ~~+~~
+	r^{(2)\mu\nu\rho}_{Qu} \cdot
+	\ov{Q}\, \sigma_{\nu)\rho} u \; \md_{(\mu} \epsilon H^* ~~+~~
 	\text{h.c.}
 \end{align}
 	where $ \epsilon H^* $ is the charge conjugate of the Higgs field.	
@@ -1534,57 +1595,80 @@ $ \ov{Q}\, \gamma^\lambda G_{\mu\lambda} Q $
 \notag
 	&
 	\phantom{+~~}
-	\ov{L}\, \gamma^\mu L \cdot H^\dag H ~~+~~
-	\ov{\nu}\, \gamma^\mu \nu \cdot H^\dag H ~~+~~
-	\ov{e}\, \gamma^\mu e \cdot H^\dag H 
+	h_{LL}^\mu \cdot
+	\ov{L}\, \gamma_\mu L \cdot H^\dag H ~~+~~
+	h_{\nu\nu}^\mu \cdot
+	\ov{\nu}\, \gamma_\mu \nu \cdot H^\dag H ~~+~~
+	h_{ee}^\mu \cdot
+	\ov{e}\, \gamma_\mu e \cdot H^\dag H 
 	\\
 % third line
 \notag
 	&
 	+~~
-	\ov{L}H \, \gamma^\mu\, H^\dag L ~~+~~
-	\ov{L}\epsilon H^* \, \gamma^\mu \, H^T \epsilon L 
+	p^{(1)\mu}_{LL} \cdot
+	\ov{L}H \, \gamma_\mu\, H^\dag L ~~+~~
+	p^{(2)\mu}_{LL} \cdot
+	\ov{L}\epsilon H^* \, \gamma_\mu \, H^T \epsilon L 
 	\\
 % fourth line
 \notag
 	&
 	+~~
-	\ov{L}\, \md^\mu d\cdot H ~~+~~
-	\ov{L}\, e \; \md^\mu H ~~+~~
-	\ov{L}\, \md^\mu \nu \cdot \epsilon H^* ~~+~~
-	\ov{L}\, \nu \; \md^\mu \epsilon H^* ~~+~~
+	q^{(1)\mu}_{Le} \cdot
+	\ov{L}\, \md_\mu e\cdot H ~~+~~
+	q^{(2)\mu}_{Le} \cdot
+	\ov{L}\, e \; \md_\mu H ~~+~~
 	\text{h.c.}
 	\\
 % fifth line
 \notag
 	&
 	+~~
-	\ov{L}\, \sigma^{\mu\nu} \md_\nu e \cdot H ~~+~~
-	\ov{L}\, \sigma^{\mu\nu} e\; \md_\nu H ~~+~~
+	q^{(1)\mu}_{L\nu} \cdot
+	\ov{L}\, \md_\mu \nu \cdot \epsilon H^* ~~+~~
+	q^{(2)\mu}_{L\nu} \cdot
+	\ov{L}\, \nu \; \md_\mu \epsilon H^* ~~+~~
 	\text{h.c.}
 	\\
 % sixth line
 \notag
 	&
 	+~~
-	\ov{L}\, \md^{(\mu} \sigma^{\nu)\rho} e \cdot H ~~+~~
-	\ov{L}\, \sigma^{\nu)\rho} e \; \md^{(\mu} H ~~+~~
+	r^{(1)\nu}_{Le} \cdot
+	\ov{L}\, \sigma^{\mu\nu} \md_\nu e \cdot H ~~+~~
+	r^{(2)\nu}_{Le} \cdot
+	\ov{L}\, \sigma^{\mu\nu} e\; \md_\nu H ~~+~~
 	\text{h.c.}
 	\\
 % seventh line
 \notag
 	&
 	+~~
-	\ov{L}\, \sigma^{\mu\nu} \md_\nu \nu \cdot \epsilon H^* ~~+~~
-	\ov{L}\, \sigma^{\mu\nu} \nu\; \md_\nu \epsilon H^* ~~+~~
+	r^{(1)\mu\nu\rho}_{Le} \cdot
+	\ov{L}\, \md_{(\mu} \sigma_{\nu)\rho} e \cdot H ~~+~~
+	r^{(2)\mu\nu\rho}_{Le} \cdot
+	\ov{L}\, \sigma_{\nu)\rho} e \; \md_{(\mu} H ~~+~~
 	\text{h.c.}
 	\\
 % eighth line
 \notag
 	&
 	+~~
-	\ov{L}\, \md^{(\mu} \sigma^{\nu)\rho} \nu \cdot \epsilon H^* ~~+~~
-	\ov{L}\, \sigma^{\nu)\rho} \nu \; \md^{(\mu} \epsilon H^* ~~+~~
+	r^{(1)\nu}_{L\nu} \cdot
+	\ov{L}\, \sigma^{\mu\nu} \md_\nu \nu \cdot \epsilon H^* ~~+~~
+	r^{(2)\nu}_{L\nu} \cdot
+	\ov{L}\, \sigma^{\mu\nu} \nu\; \md_\nu \epsilon H^* ~~+~~
+	\text{h.c.}
+	\\
+% ninth line
+\notag
+	&
+	+~~
+	r^{(1)\mu\nu\rho}_{L\nu} \cdot
+	\ov{L}\, \md_{(\mu} \sigma_{\nu)\rho} \nu \cdot \epsilon H^* ~~+~~
+	r^{(2)\mu\nu\rho}_{L\nu} \cdot
+	\ov{L}\, \sigma_{\nu)\rho} \nu \; \md_{(\mu} \epsilon H^* ~~+~~
 	\text{h.c.}
 \end{align}
 
@@ -1599,10 +1683,12 @@ $ \ov{Q}\, \gamma^\lambda G_{\mu\lambda} Q $
 	is beneficial for imposing constraints,
 	we are not setting the goal to derive all one-loop RG
 	equations similarly to what we have done in QED.
-	Most of the interactions contain the Higgs field and at low
-	energies only induce effectively higher-dimensional structures,
-	and as such are not very appealing from the phenomenological point of
-	view.
+	Most of the interactions contain the Higgs field and induce effects
+	at low energies only through dimension 6 operators. 
+%effectively higher-dimensional structures,
+%	and as such are 
+%not very appealing from the phenomenological point of
+%	view.
 	On the other hand, of particular interest are
 %	From now on we only concentrate on 
 	the rank three absolutely
@@ -1626,6 +1712,7 @@ $ \ov{Q}\, \gamma^\lambda G_{\mu\lambda} Q $
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Phenomenological Discussion}
+\label{phenomenology}
 	
 	Given the abundance of non-minimal interactions we have derived in 
 	the last section it would be no wonder that most of them if not all
@@ -1754,9 +1841,9 @@ $ \ov{Q}\, \gamma^\lambda G_{\mu\lambda} Q $
 	| b^\mu | ~=~ ({\rm loop\ factor})\, 
 		\Lambda^2 | \wt{c}^\mu |  ~\lesssim~ 10^{-29}~{\rm GeV}~.
 \end{equation}
-	Even in the mildest UV scenario, {\it e.g.} $ \Lambda = \Lambda_{\rm SUSY} $,
-	this limit would exhibit strongly unnatural hierarchy between the interactions
-	\eqref{SM_quark}, \eqref{SM_lepton}. 
+	Even in the mildest UV scenario, {\it e.g.} $ \Lambda = \Lambda_{\rm weak} $,
+	this limit would exhibit strongly unnatural hierarchy between different interactions
+	in Eqs. \eqref{SM_quark} and \eqref{SM_lepton}. 
 	
 	Leaving ourselves only with UV-safe operators, 
 %	In all, denoting $ q = u, d $, 
@@ -2030,8 +2117,10 @@ $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusion}
-	We have presented an example of a generic Lorentz-violating 
-	extension of a theory. 
+	We have presented a generic Lorentz-violating extension of 
+	Quantum Electrodynamics and the Standard Model with dimension five operators.
+%	We have presented an example of a generic Lorentz-violating 
+%	extension of a theory. 
 	It has been shown that QED admits a plenty of interactions,
 	parametrized by background vectors and tensors.
 	Exploration of some of the operators was done earlier
@@ -2047,7 +2136,9 @@ $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
 	We show that the method of irreducible tensors, which itself is a systematic
 	tool for building a theory, appears useful for these purposes too.
 
-	However, the accent of this paper was mainly put on the Standard Model 
+	QED left as a toy model,
+%	However, 
+	the accent of this paper was mainly put on the Standard Model 
 	domain.
 	The wider gauge group, and the diversity of field content lead
 	to a sufficiently broader set of LV structures, although the gauge
@@ -2069,7 +2160,8 @@ $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
 	conclusion that Lorentz violation at dimension five level in the Standard
 	Model is excluded by observations.
 
-	Although the Standard Model is now out of fashion, we observe that 
+	Due to the rich field content of the Standard Model,
+%	Although the Standard Model is now out of fashion, we observe that 
 	the spectrum of LV interactions is one of the widest.
 	At the same time, due to experimental accessibility of the
 	former, analysis of the LV operators in the
@@ -2078,7 +2170,8 @@ $ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
 %	that any extension of the Standard Model, should it possess
 %	LV properties, in the low energy regime will always be described
 %	by some of the operators we have built.
-	Reversely, in more abstract theories with Lorentz violation, 
+%	Reversely, in more abstract theories with Lorentz violation, 
+	In more abstract (and thus less accessible) theories with Lorentz violation, 
 	if they appeal for phenomenological
 	viability, we can expect that the LV behavior in the low energy regime will 
 	always be described by some of the operators we have built.
